Fixed boards index overflow

--- a/web/static/css/global/_layout.sass
+++ b/web/static/css/global/_layout.sass
@@ -37,4 +37,3 @@ html
         flex: 1
         padding: $base-spacing
         height: calc(100% - 3em)
-        overflow-y: scroll
